--- a/README.Rmd
+++ b/README.Rmd
@@ -12,15 +12,21 @@ knitr::opts_chunk$set(
 )
 ```
 
-# materializer <img src="http://materializecss.com/res/materialize.svg" width="150">
+<ul style="display:inline-block; list-style:none; vertical-align:center;">
+  <li style="display:inline-block; list-style:none; vertical-align:center;"><h1>MaterializeR</h1></li>
+  <li style="display:inline-block; list-style:none; vertical-align:center;"><h1>&ensp; &#61; &ensp;</h1></li>
+  <li style="display:inline-block; list-style:none; vertical-align:center;"><img src="http://materializecss.com/res/materialize.svg" width="150"></li>
+  <li style="display:inline-block; list-style:none; vertical-align:center;"><h1>&ensp; &#43; &ensp;</h1></li>
+  <li style="display:inline-block; list-style:none; vertical-align:center;"><img src="https://www.rstudio.com/wp-content/uploads/2014/04/shiny-400x464.png" height="100"></li>
+</ul>
 
-[![Travis-CI Build Status](https://travis-ci.org/TuSKan/materializer.svg?branch=master)](https://travis-ci.org/TuSKan/materializer)
+<a style="position:fixed; top:20px; right:20px;" href = "https://travis-ci.org/TuSKan/materializer"><img src = "https://travis-ci.org/TuSKan/materializer.svg?branch=master" alt = "Travis-CI Build Status"></a>
 
 ## Overview
 
-The materializer is a set of packages that work in harmony because they share common data representations and API design. The __materializer__ package is designed to make it easy to install and load core packages from the tidyverse in a single command.
+The __materializer__ is a new package to make your shiny applications modern, responsive and with the design of Material Design.
 
-If you'd like to learn how to use the tidyverse effectively, the best place to start is [materialize](http://materializecss.com/).
+If you'd like to know more about materialize css framework, visit here [materialize](http://materializecss.com/).
 
 ## Installation
 
@@ -32,3 +38,10 @@ install.packages("materializer")
 # install.packages("devtools")
 devtools::install_github("tuskan/materializer")
 ```
+
+## Related work
+
+* https://github.com/rstudio/shiny, Easy interactive web applications with R
+* https://github.com/Appsilon/shiny.semantic, build shiny applications with the Semantic UI library
+* https://github.com/nteetor/dull, Build Bootstrap 4 applications with the familiar Shiny toolkit.
+* https://github.com/ericrayanderson/shinymaterial, build shiny apps on top of material design
