--- a/README.Rmd
+++ b/README.Rmd
@@ -12,6 +12,7 @@ knitr::opts_chunk$set(
 )
 ```
 
+<!--
 <ul style="display:inline-block; list-style:none; vertical-align:center;">
   <li style="display:inline-block; list-style:none; vertical-align:center;"><h1>MaterializeR</h1></li>
   <li style="display:inline-block; list-style:none; vertical-align:center;"><h1>&ensp; &#61; &ensp;</h1></li>
@@ -21,6 +22,10 @@ knitr::opts_chunk$set(
 </ul>
 
 <a style="position:fixed; top:20px; right:20px;" href = "https://travis-ci.org/TuSKan/materializer"><img src = "https://travis-ci.org/TuSKan/materializer.svg?branch=master" alt = "Travis-CI Build Status"></a>
+-->
+# MaterializeR = <img src="http://materializecss.com/res/materialize.svg" width="150"> + <img src="https://www.rstudio.com/wp-content/uploads/2014/04/shiny-400x464.png" height="100">
+
+[![Travis-CI Build Status](https://travis-ci.org/TuSKan/materializer.svg?branch=master)](https://travis-ci.org/TuSKan/materializer)
 
 ## Overview
 
